         GArray) when Fuse is exiting: memory, mempool, event, debugger/event,
         rzx (part of patch #3404090) (Sergio Baldoví).
20110910 menu_data.dat: fix compilation of non GTK+ and Win32 UIs (thanks,
         pmrtvcom) (Sergio Baldoví).
20110919 ui/fb/fbui.c,ui/sdl/sdlui.c,ui/svga/svgaui.c,ui/widget/{Makefile.am,
         menu.c,pokemem.c,widget.[ch],widget_internals.h}: add Poke Memory
         feature to the widget UIs (patch #3410145) (Sergio Baldoví).
20110919 ui/widget/widget.c: allow "Confirm actions" to be disabled in the
         widget UIs (patch #3410837) (Sergio Baldoví).
20110919 input.c: fix widget UI crash when JOYSTICK_FIRE_2 button is pressed
         just after Fuse starts up on non-Wii platforms (patch #3410841) (Sergio
         Baldoví).
20110925 ui/win32/installer/fuse.nsi: windows installer improvements; by
         default, don't register file extensions associated with other programs,
         association with file extensions can be individually enabled, add fuse
         to the OpenWith programs list for known extensions and add .pzx
         extension association (patch #3413548) (Sergio Baldoví).
20110927 debugger/disassemble.c: disassemble ED 4D as RETI (patch #3414394)
         (Simon Owen).
20111106 peripherals/disk/{disk.c,wd_fdc.c},snapshot.c,ui/gtk/options.pl:
         remove unused variables (thanks, gcc 4.6).
20111108 unittests/unittests.c: beginnings of a paging unit test.
20111114 unittests/unittests.c: add 48K and +2A/+3 paging unit tests.
20111114 machines/pentagon1024.c: Pentagon1024 does not have 128K-style memory
         paging (as paging is not locked on a write of 0x20 unless the
         secondary port has been written to as well).
20111114 unittests/unittests.c: add Pentagon paging tests.
20111114 unittests/unittests.c: get more test coverage by using
         writeport_internal rather than explicit function calls.
20111114 unittests/unittests.c: add TC2068 paging test.